--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-shims": "^1.1.0",
+    "ember-cli-showdown": "^4.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
     "ember-data": "^2.13.0",
@@ -34,7 +35,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.13.0",
-    "ember-welcome-page": "^3.0.0",
+    "emberfire": "^2.0.8",
     "loader.js": "^4.2.3"
   },
   "engines": {
